# shadow-thingy

./: .gitmodules  CMakeLists.txt  README.md  test.ppm
src/: main.c
src/render/: block.c  block.h  render.c  render.h
src/render/tri/: fill.c  fill.h
src/render/type/: type.c  type.h
